Restructure runtime into extern jvm and js